[gd_scene load_steps=32 format=3 uid="uid://vm3dpyi8i87w"]

[ext_resource type="Script" path="res://core/autoloads/screen_effects/cutscene_bars.gd" id="1_ibg84"]
[ext_resource type="Script" path="res://core/autoloads/screen_effects.gd" id="1_xbhkq"]
[ext_resource type="Texture2D" uid="uid://bloum3j02ksy4" path="res://assets/hud/speed_line.png" id="2_lfy5i"]

[sub_resource type="Animation" id="Animation_dt7j2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-88, -72)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-48, 392)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tj6xj"]
resource_name = "hide_bars"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(-88, -64), Vector2(-88, -128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(-56, 680), Vector2(-56, 784)]
}

[sub_resource type="Animation" id="Animation_2igc4"]
resource_name = "show_bars"
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("show_bar"),
"times": PackedFloat32Array(0)
}
tracks/1/type = "animation"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBar/AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": PackedStringArray("show_bar"),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-88, -128), Vector2(-88, -64)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BottomBar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-56, 784), Vector2(-56, 680)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8lshp"]
resource_name = "showing"
length = 0.001
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("showing"),
"times": PackedFloat32Array(0)
}
tracks/1/type = "animation"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBar/AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": PackedStringArray("showing"),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TopBar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-88, -64)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BottomBar:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-56, 680)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6eo4y"]
_data = {
"RESET": SubResource("Animation_dt7j2"),
"hide_bars": SubResource("Animation_tj6xj"),
"show_bars": SubResource("Animation_2igc4"),
"showing": SubResource("Animation_8lshp")
}

[sub_resource type="Animation" id="Animation_3bnsu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar/BlackBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1600, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopBar/BlackBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 80)]
}

[sub_resource type="Animation" id="Animation_rsvwo"]
resource_name = "show_bar"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar/BlackBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector2(1600, 120), Vector2(1600, 120), Vector2(1600, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopBar/BlackBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, 2), Vector2(0, 82)]
}

[sub_resource type="Animation" id="Animation_aav4h"]
resource_name = "showing"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar/BlackBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1600, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopBar/BlackBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 80)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ia2wn"]
_data = {
"RESET": SubResource("Animation_3bnsu"),
"show_bar": SubResource("Animation_rsvwo"),
"showing": SubResource("Animation_aav4h")
}

[sub_resource type="Animation" id="Animation_f4j42"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1600, 40)]
}

[sub_resource type="Animation" id="Animation_vcrcn"]
resource_name = "show_bar"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(1600, 120), Vector2(1600, 120), Vector2(1600, 40)]
}

[sub_resource type="Animation" id="Animation_k5gi8"]
resource_name = "showing"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1600, 80)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o5sbs"]
_data = {
"RESET": SubResource("Animation_f4j42"),
"show_bar": SubResource("Animation_vcrcn"),
"showing": SubResource("Animation_k5gi8")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r6ff5"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 200.0
emission_ring_radius = 800.0
emission_ring_inner_radius = 500.0
particle_flag_align_y = true
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
radial_accel_min = -500.0
radial_accel_max = -500.0

[sub_resource type="Animation" id="Animation_4fiv5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-304, -232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1400, -48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1312, 864)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftBar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-48, 656)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0cci4"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(-304, -96), Vector2(-304, -232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1296, 56), Vector2(1400, -48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1248, 760), Vector2(1368, 864)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftBar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(-48, 656), Vector2(-200, 760)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_u5s44"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-304, -232), Vector2(-304, -96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1400, -48), Vector2(1296, 56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1368, 864), Vector2(1248, 760)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftBar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-200, 760), Vector2(-48, 656)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0gf43"]
_data = {
"RESET": SubResource("Animation_4fiv5"),
"hide": SubResource("Animation_0cci4"),
"show": SubResource("Animation_u5s44")
}

[sub_resource type="Animation" id="Animation_l4maa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_r1tbw"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_21b24"]
resource_name = "fade_in_white"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_lqxi7"]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vkt7w"]
_data = {
"RESET": SubResource("Animation_l4maa"),
"fade_in": SubResource("Animation_r1tbw"),
"fade_in_white": SubResource("Animation_21b24"),
"hide": SubResource("Animation_lqxi7")
}

[sub_resource type="Animation" id="Animation_nt0tg"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k1tw1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qmg46"]
resource_name = "fade_out_white"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1e2tg"]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lq4oj"]
_data = {
"RESET": SubResource("Animation_nt0tg"),
"fade_out": SubResource("Animation_k1tw1"),
"fade_out_white": SubResource("Animation_qmg46"),
"hide": SubResource("Animation_1e2tg")
}

[node name="ScreenEffects" type="CanvasLayer"]
layer = 99
script = ExtResource("1_xbhkq")

[node name="CutsceneBars" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibg84")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CutsceneBars"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_6eo4y")
}

[node name="TopBar" type="Control" parent="CutsceneBars"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -88.0
offset_top = -72.0
offset_right = 68552.0
offset_bottom = -12.0
grow_horizontal = 2
rotation = -0.0174533

[node name="AnimationPlayer" type="AnimationPlayer" parent="CutsceneBars/TopBar"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ia2wn")
}

[node name="WhiteBar" type="ColorRect" parent="CutsceneBars/TopBar"]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 120.0

[node name="BlackBar" type="ColorRect" parent="CutsceneBars/TopBar"]
layout_mode = 0
offset_top = 80.0
offset_right = 1600.0
offset_bottom = 120.0
color = Color(0, 0, 0, 1)

[node name="BottomBar" type="Control" parent="CutsceneBars"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = 392.0
offset_right = 68592.0
offset_bottom = 452.0
grow_horizontal = 2
grow_vertical = 0
rotation = -0.0174533

[node name="AnimationPlayer" type="AnimationPlayer" parent="CutsceneBars/BottomBar"]
libraries = {
"": SubResource("AnimationLibrary_o5sbs")
}

[node name="WhiteBar" type="ColorRect" parent="CutsceneBars/BottomBar"]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 120.0

[node name="BlackBar" type="ColorRect" parent="CutsceneBars/BottomBar"]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="SpeedLines" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="SpeedLines"]
position = Vector2(640, 360)
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_r6ff5")
texture = ExtResource("2_lfy5i")
lifetime = 0.05
explosiveness = 1.0

[node name="SkillFrames" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="SkillFrames"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_0gf43")
}

[node name="TopBar" type="Control" parent="SkillFrames"]
custom_minimum_size = Vector2(1920, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -304.0
offset_top = -232.0
offset_right = 42576.0
offset_bottom = -132.0
grow_horizontal = 2
rotation = 0.0523599

[node name="White" type="ColorRect" parent="SkillFrames/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="SkillFrames/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RightBar" type="Control" parent="SkillFrames"]
custom_minimum_size = Vector2(1920, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1400.0
offset_top = -48.0
offset_right = 44280.0
offset_bottom = 52.0001
grow_horizontal = 2
rotation = 1.51844

[node name="White" type="ColorRect" parent="SkillFrames/RightBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="SkillFrames/RightBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BottomBar" type="Control" parent="SkillFrames"]
custom_minimum_size = Vector2(1920, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1312.0
offset_top = 864.0
offset_right = 44192.0
offset_bottom = 964.0
grow_horizontal = 2
rotation = 3.15905

[node name="White" type="ColorRect" parent="SkillFrames/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="SkillFrames/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LeftBar" type="Control" parent="SkillFrames"]
custom_minimum_size = Vector2(1920, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -48.0
offset_top = 656.0
offset_right = 42832.0
offset_bottom = 756.0
grow_horizontal = 2
rotation = 4.75777

[node name="White" type="ColorRect" parent="SkillFrames/LeftBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="SkillFrames/LeftBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ScreenTransition" type="CanvasLayer" parent="."]
layer = 101

[node name="Cover" type="Control" parent="ScreenTransition"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition/Cover"]
libraries = {
"": SubResource("AnimationLibrary_vkt7w")
}

[node name="ColorRect" type="ColorRect" parent="ScreenTransition/Cover"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Uncover" type="Control" parent="ScreenTransition"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition/Uncover"]
libraries = {
"": SubResource("AnimationLibrary_lq4oj")
}

[node name="ColorRect" type="ColorRect" parent="ScreenTransition/Uncover"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
